# routes/contactMessage.js
@@ -1,7 +1,9 @@
 const express = require("express");
-const { sendContactMessage } = require("../controllers/contactMessage");
+const { sendMessage, getMessages } = require("../controllers/message");
+const authCheck = require("../middlewares/authCheck,");
 const router = express.Router();
 
-router.post("/sendMessage", sendContactMessage);
+router.post("/sendMessage", sendMessage);
+router.get("/getMessages",authCheck,getMessages);
 
 module.exports = router;
